--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="col-md-8 col-sm-8">
                         <div class="home_text">
                             <!-- TITLE AND DESC -->
-                            <h1>André C. Santos</h1>
+                            <h1>André C. Santoss</h1>
                             <p>Director | Editor | Camera Op.</p>
 
                             <div class="download-btn">
