--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="col-md-8 col-sm-8">
                         <div class="home_text">
                             <!-- TITLE AND DESC -->
-                            <h1>André C. Santoss</h1>
+                            <h1>André C. Santos</h1>
                             <p>Director | Editor | Camera Op.</p>
 
                             <div class="download-btn">
@@ -172,8 +172,19 @@
                     <div class="col-md-6 wow fadeInLeftBig">
                     <!-- VIDEO LEFT TITLE -->
                         <div class="video_title">
-                            <h2>Best App <br>in the market</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                            <h2>THUNDER & CO - N.I.K.<br></h2>
+                            <p>Criação e produção : Solid Dogma
+                                Actor : Romeu Runa
+                                Produtora : Leonor Viegas
+                                Realização : André Santos 
+                                Imagem : André Santos 
+                                Assistente realização : João Sousa
+                                DOP : Rita Grazina e João Sousa
+                                Iluminação : António Matias
+                                Edição : André Santos
+                                Assistente produção : Luciano Manso
+                                Pós-Produção : Ingreme
+                                Agradecimentos: Bruna, Cristina e Ivo – “Farturas À Otário”</p>
                         </div>
                         
                     </div>
@@ -192,8 +203,19 @@
                     <div class="col-md-6 wow fadeInLeftBig">
                     <!-- VIDEO LEFT TITLE -->
                         <div class="video_title">
-                            <h2>Best App <br>in the market</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                            <h2>THUNDER & CO - N.I.K.<br></h2>
+                            <p>Criação e produção : Solid Dogma
+                                Actor : Romeu Runa
+                                Produtora : Leonor Viegas
+                                Realização : André Santos 
+                                Imagem : André Santos 
+                                Assistente realização : João Sousa
+                                DOP : Rita Grazina e João Sousa
+                                Iluminação : António Matias
+                                Edição : André Santos
+                                Assistente produção : Luciano Manso
+                                Pós-Produção : Ingreme
+                                Agradecimentos: Bruna, Cristina e Ivo – “Farturas À Otário”</p>
                         </div>
                         
                     </div>
