PRIMEIRA GRANDE ALTERACAO
MINIMALISMO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>André C. Santos | Freelancer</title>
+    <title>André C. Santos</title>
     <!-- Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:500,600,700,800,900,400,300' rel='stylesheet' type='text/css'>
 
@@ -81,8 +81,10 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <!-- NAV -->
-                            <li><a href="#HOME">HOME</a> </li>
-                            <li><a href="#VIDEOS">VIDEOS</a> </li>
+                            <li><a href="#VIDEOS">MUSIC VIDEOS</a> </li>
+                            <li><a href="#VIDEOS">DOCUMENTARIES</a> </li>
+                            <li><a href="#VIDEOS">ADVERTISEMENTS</a> </li>
+                            <li><a href="#VIDEOS">OTHER PROJECTS</a> </li>
                             <li><a href="#ABOUT">ABOUT </a> </li>
                             <li><a href="#CONTACT">CONTACT </a> </li>
                         </ul>
@@ -93,24 +95,18 @@
             </nav>
 
             <div class="container home-container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="logo text-center">
-                                <!-- LOGO -->
-                           
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 col-sm-8">
+<div class="row">
+          <div class="col-md-8 col-sm-8 col-lg-12">
                         <div class="home_text">
                             <!-- TITLE AND DESC -->
-                            <h1>André C. Santos</h1>
-                            <p>Director | Editor | Camera Op.</p>
-
-                            <div class="download-btn">
+                           
+                            <div class="download-btn col-lg-10 col-lg-offset-1">
                             <!-- BUTTON -->
-                              <a class="tuor btn wow fadeInRight" href="#VIDEOS">unreel<i class="fa fa-angle-down"></i></a>
+                            <h1 style="color:black;" class="text-center">André C. Santos</h1>
+                            <a class="tuor btn wow fadeInRight" href="#VIDEOS">Music videos<i class="fa fa-angle-down"></i></a>
+                              <a class="tuor btn wow fadeInRight" href="#VIDEOS">Documentaries<i class="fa fa-angle-down"></i></a>
+                              <a class="tuor btn wow fadeInRight" href="#VIDEOS">Advertisements<i class="fa fa-angle-down"></i></a>
+                              <a class="tuor btn wow fadeInRight" href="#VIDEOS">Other Projects<i class="fa fa-angle-down"></i></a>
                             </div>
                         </div>
                     </div>
@@ -281,7 +277,7 @@
                                                 <div class="testimonial_caption">
                                                    <!-- DESCRIPTION -->  
                                                     <h2>André C. Santos</h2>
-                                                    <p>André Santos(1990) is a director, editor, camera operator and colorist. Furthermore, he is also a photographer. 
+                                                    <p class="text-justify col-lg-offset-1 col-lg-10">André Santos(1990) is a director, editor, camera operator and colorist. Furthermore, he is also a photographer. 
                                                     After studying cinema, video and post­production, he developed several projects as a freelancer.
 André collaborated with the producer Cut Films until 2014, when he was invited to be a part of Vhils Studio’s and Underdogs Gallery’s teams, where he worked as a director, camera operator and editor. In this context, André was the editor of several videos directed by Alexando Farto aka Vhils and was, himself, the director of many videos about the artist. He was also the author of several videos about Underdogs Gallery’s projects and artists, such as Ernest Zacharevic, AkaCorleone, Sainer, ±MaisMenos±, Finok, Pedro Matos and so on. Since 2015, André worked with the creative unit Solid Dogma, signing videoclips, and commercial and institucional movies for television and other entities.
 The language developed by André during his career expresses an authorial intentionality to create visual compositions full of complex narratives, linear and nonlinear, exploring metaphorical and poetic dimensions that invite to a personal interpretation of its histories.</p>
